tests/ui/db_option_missing.stderr
error: No database backend specified to use as backend

         = help: specify a backend using #[dbstruct(db=sled)]

 --> tests/ui/db_option_missing.rs:3:1
  |
3 | #[dbstruct]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)
